syntax = "proto2";
package robobuf_unittest;

import "namespaces.proto";

option java_package = "us.hebi.robobuf.test";
option java_outer_classname = "ImportingOuterClass";
option java_multiple_files = true;

// Same as TestAllTypes but with the nano runtime.
message ContainerMessage {

  message NestedMessage {
    optional int32 bb = 1;
  }

  enum NestedEnum {
    FOO = 1;
    BAR = 2;
    BAZ = 3;
  }

  // Defined inside message
  optional NestedMessage optional_nested_message = 1;
  optional NestedEnum optional_nested_enum = 2;

  // Defined in this file
  optional ForeignMessage optional_foreign_message = 3;
  optional ForeignEnum optional_foreign_enum = 4;

  // Defined in a different file and in a different namespace
  optional robobuf_unittest_import.ImportMessage optional_import_message = 5;
  optional robobuf_unittest_import.ImportEnum optional_import_enum = 6;

  // Defined in a different file as a nested message
  optional robobuf_unittest_import.ImportMessage.NestedImportMessage optional_nested_import_message = 7;

}

message ForeignMessage {
  optional int32 c = 1;
}

enum ForeignEnum {
  FOREIGN_FOO = 4;
  FOREIGN_BAR = 5;
  FOREIGN_BAZ = 6;
}